fix some warnings and typos (#14)